# paperstack

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  index.css  store.test.ts  store.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/vscode/: .gitignore  .vscodeignore  README.md  package.json  tsconfig.json
apps/vscode/media/: preview.js
apps/vscode/scripts/: prepare-media.mjs
apps/vscode/src/: authoring.ts  extension.ts  project.ts  typst.ts
docs/: CLEAN-MACHINE-TEST.md  DEVELOPMENT.md  DIRECTION.md  MVP.md  PROJECT.md  STACK.md
fixtures/demo-report/: document.yaml
fixtures/demo-report/appendices/: appendix-a-extras.md
fixtures/demo-report/chapters/: 00-front-matter.md  01-introduction.md  02-implementation.md  (+2 more)
fixtures/golden-typst/: 00-front-matter.typ  01-introduction.typ  02-implementation.typ  03-conclusion.typ  04-references.typ  appendix-a-extras.typ
fixtures/showcase-report/: document.yaml  references.bib
fixtures/tiffany-demo/: .gitignore  document.yaml  paperstack-template.typ  references.bib
scripts/: build-report.ts  check-report.ts  converter-parity.ts  fetch-binaries.ps1  fetch-binaries.ts  smoke-app.ts  update-golden-typst.ts
(+49 files in other folders)
