[package]
name = "paperstack"
version = "0.1.0"
description = "Paperstack — professional reports from Markdown sections"
authors = ["majlando"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name conflict with the bin target on Windows.
name = "paperstack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
